<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eagattas.helloworld.CompareCitiesActivity">

    <TextView
        android:id="@+id/location1Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/location1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/locationGroup1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/currentLocationRadio"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/location1Text">

        <RadioButton
            android:id="@+id/currentLocationRadio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="autoip"
            android:text="@string/current_location"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/detroitRadio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="MI/Detroit"
            android:text="@string/detroit"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/losAngelesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/los_angeles"
            android:contentDescription="CA/Los_Angeles"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RadioButton
            android:id="@+id/miamiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miami"
            android:contentDescription="FL/Miami"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RadioButton
            android:id="@+id/otherRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Other"
            android:text="@string/other"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RadioGroup>

    <EditText
        android:id="@+id/editZipCode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/zip_code"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationGroup1" />

    <RadioGroup
        android:id="@+id/locationGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/detroitRadio2"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location2Text">

        <RadioButton
            android:id="@+id/currentLocationRadio2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="autoip"
            android:text="@string/current_location"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/detroitRadio2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="MI/Detroit"
            android:text="@string/detroit"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/losAngelesButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="CA/Los_Angeles"
            android:text="@string/los_angeles"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/miamiButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="FL/Miami"
            android:text="@string/miami"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/otherRadio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Other"
            android:text="@string/other"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RadioGroup>

    <EditText
        android:id="@+id/editZipCode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/zip_code"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationGroup2" />

    <TextView
        android:id="@+id/location2Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="252dp"
        android:text="@string/location2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:onClick="compareConfirm"
        android:text="@string/button_send"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="16dp" />

</android.support.constraint.ConstraintLayout>
